# CourseAssigner

./: .gitignore  LICENSE  README.md  pyproject.toml
course_assigner/: __init__.py
formats/: courses.csv  courses.json  preferences.csv  preferences.json
scripts/: generate_random_presets.py  random_presets.json
